Augment ForgeIT with requested feature interfaces